--- a/index.html
+++ b/index.html
@@ -7,25 +7,46 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>bp</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="/app/assets/src/icons/apple-touch-icon.png">
-    <link rel="stylesheet" href="/app/assets/src/css/bundle.css">
+    <title>jghlt</title>
+    <meta name="description" content="jgh.lt">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#242529">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/app/assets/src/icons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/app/assets/src/icons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/app/assets/src/icons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/app/assets/src/icons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/app/assets/src/icons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/app/assets/src/icons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/app/assets/src/icons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/app/assets/src/icons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/app/assets/src/icons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/app/assets/src/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/app/assets/src/icons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/app/assets/src/icons/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="/app/assets/src/icons/favicon-192x192.png" sizes="192x192">
+
+    <link rel="stylesheet" type="text/css" href="/app/assets/src/css/bundle.css">
 
 </head>
 <body>
 
-    <h1>Hello world</h1>
+    <div class="fallback">
+        <span class="fallback__message">
+            Sorry, this website is designed to work in modern browsers such as google chrome. Please update your browser to view this site. <a class="action" href="http://browsehappy.com/" target="_blank">Browse happy</a>.
+        </span>
+    </div>
+
+    <div class="holding">
+        <div class="holding__title">
+            <h1 class="holding__line">
+                <a class="action" href="http://jgh.lt" target="_blank">jgh.lt</a>
+            </h1>
+        </div>
+    </div>
+
     <script src="/app/assets/src/js/bundle.js" async></script>
-    <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script>
 
 </body>
 </html>
